fixed Eliminating Predicates(Stage 3)